Fix legacy grid
Remove bottom margin on header to avoid overlap.
Allow body to scroll.
Add some margin to legacy grid on smaller screens.

--- a/www.foia.gov/_sass/modules/_site_header.scss
+++ b/www.foia.gov/_sass/modules/_site_header.scss
@@ -45,6 +45,7 @@
 h1.usa-header-title {
   @media screen and (max-width: $medium-large-screen) {
     font-size: $base-font-size;
+    margin-bottom: 0;
   }
 }
 
