--- a/www.foia.gov/_sass/theme/_temp_fixes.scss
+++ b/www.foia.gov/_sass/theme/_temp_fixes.scss
@@ -108,8 +108,11 @@ input.deleteAgency:hover{
 }
 
 .grid-legacy {
-  margin: auto;
+  margin: $space-2x auto;
   width: calc(1040px - 6rem); // We want a fixed grid because the legacy content is not responsive. Chose 980px because it almost matches usa-grid on large screen sizes (1040 - padding)
+  @media screen and (max-width: $medium-large-screen) {
+    margin-left: $space-2x;
+  }
 }
 
 /* qtip for glance.html */
@@ -118,5 +121,10 @@ input.deleteAgency:hover{
    overflow: hidden;
 }
 .qtip .qtip-content .qtip-title,.qtip-cream .qtip-content .qtip-title{background-color: #f8f8f8;}
+
+/* For the grid-legacy to work */
+body {
+  overflow-x: auto;
+}
 
 /* end temp styles */
